--- a/jogo da velha/css/style.css
+++ b/jogo da velha/css/style.css
@@ -27,7 +27,7 @@ body {
 
 .btn {
   border: 5px solid #2c3e50;
-  background-color: #34495e;
+  background-color: #ff0000;
   color: white;
   margin-top: 10px;
   padding: 10px 20px
